--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "next": "15.0.0-rc.0",
     "next-auth": "5.0.0-beta.19",
+    "next-cors": "^1.0.0",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
